# shikimore

./: .gitmodules  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.test.tsx  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CharacterDetailView.tsx  ContentCard.tsx  DetailView.tsx  ExternalLinks.tsx  FilterBar.tsx  FloatingTabs.tsx  HorizontalScroll.tsx  MainScreen.tsx  PersonCard.tsx  RatingStats.tsx  RelatedCard.tsx  SettingsView.tsx  TitleBar.tsx
src/components/common/: Badge.tsx  LoadingSpinner.tsx  MarqueeText.tsx  ScoreBadge.tsx  SkeletonCard.tsx  Toast.tsx
src/components/icons/: index.tsx
src/hooks/: useAppSettings.ts  useInfiniteScroll.ts  useSearchHistory.ts  useShikimoriApi.ts
src/services/: api.ts
src/utils/: formatters.ts
