[package]
name = "shikimore"
version = "0.1.0"
description = "Shikimore - приложение для работы с Shikimori API"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shikicrate = "0.2.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
